change target to java 1.8