@@ -116,7 +116,7 @@ public class ParsedResume extends ParsedDocument {
      * @throws IOException When an error occurs reading the file
      */
     public static ParsedResume fromFile(String path) throws IOException {
-        String fileContents = Files.readString(Paths.get(path), Charset.forName("utf8"));
+        String fileContents = new String(Files.readAllBytes(Paths.get(path)), Charset.forName("utf8"));
         return fromJson(fileContents);
     }
 
