@@ -41,7 +41,7 @@ public abstract class TestBase {
     
     static {
         try {
-            String jsonCreds = Files.readString(Paths.get("src\\test\\resources\\credentials.json"), Charset.forName("utf8"));
+            String jsonCreds = new String(Files.readAllBytes(Paths.get("src\\test\\resources\\credentials.json")), Charset.forName("utf8"));
             Credentials data = new Gson().fromJson(jsonCreds, Credentials.class);
 
             GeocodeCredentials geocodeCredentials = new GeocodeCredentials();
